detalles de estilo

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             </div>
         </div>
         <footer>
-            Photo by <a href="https://unsplash.com/@devule?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Vadym</a> on <a href="https://unsplash.com/photos/gSh7G3Hc5sU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            Photo by <a href="https://unsplash.com/@ashleywhitlatch?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ashley Whitlatch</a> on <a href="https://unsplash.com/backgrounds/colors/gradient?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
         </footer>
     </div>
-<script src="./javascript/index.js"></script>
+<!-- <script src="./javascript/index.js"></script> -->
 </body>
 </html>
