--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="flex-container">
         <div class="card card-info">
-            <h1>Presupuesto mensual</h1>
+            <h1>Registro de gastos</h1>
             <div class="rollover">
                 $<div id="rollover"></div>
             </div>
