--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <footer>
             Photo by <a href="https://unsplash.com/@ashleywhitlatch?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ashley Whitlatch</a> on <a href="https://unsplash.com/backgrounds/colors/gradient?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
         </footer>
+        <span class="abby">
+            <a href="https://github.com/maenad" target="_blank">🖤</a>
+        </span>
     </div>
 <!-- <script src="./javascript/index.js"></script> -->
 </body>
