descomentando el js

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             <a href="https://github.com/maenad" target="_blank">🖤</a>
         </span>
     </div>
-<!-- <script src="./javascript/index.js"></script> -->
+<script src="./javascript/index.js"></script>
 </body>
 </html>
